fix: scrollbar style

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,7 +62,6 @@ body {
 
 * {
   user-select: none;
-  scrollbar-width: thin;
 }
 
 *::-webkit-scrollbar-track {
